--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4"
-
+    "supertest": "^6.3.4",
+    "typescript": "^4.5.4" 
   }
+  
 }
